# STM32G0xx_HAL_Driver-integration

./: APBPrescTable.cpp  CMakeLists.txt  HAL_Delay.cpp  HAL_GetTick.cpp  SystemCoreClock.cpp  stm32g0xx_hal_conf.h.in
include/: stm32g0xx.h
